# claude-usage-menubar

./: .gitignore  CLAUDE.md  DOCS.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/parser/: mod.rs  types.rs
src-tauri/src/pricing/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: BillingWindow.tsx  DailySummary.tsx  Dashboard.tsx  ModelBreakdown.tsx  MonthlySummary.tsx  SessionList.tsx  WeeklySummary.tsx
src/hooks/: useAutoRefresh.ts  useUsageData.ts
src/lib/: formatters.ts  types.ts
