[package]
name = "claude-usage-menubar"
version = "0.1.0"
description = "Claude Code Usage Menu Bar App"
authors = ["mchoi"]
edition = "2021"

[lib]
name = "claude_usage_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
